--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,38 +15,40 @@ services:
       retries: 6
 # app services
   service-data-access:
-    image: node:20.19-bullseye
+    build:
+      context: .
+      dockerfile: Dockerfile-data-access-layer
     working_dir: /home/node/app
     user: "node"  
     environment:
       - NODE_ENV=development
-    command: "sh -c 'npm install && npm run start:dev && tail -f /dev/null'"
+    command: "sh -c '/usr/local/bin/build-project.sh'"
     ports:
       - '8001:8001'
     volumes:
       - './service-data-access-layer:/home/node/app'
-  service-business-logic:
-    image: node:20.19-bullseye
-    working_dir: /home/node/app
-    user: "node"  
-    environment:
-      - NODE_ENV=development
-    command: "sh -c 'npm install && npm run start:dev && tail -f /dev/null'"
-    ports:
-      - '8002:8002'
-    volumes:
-      - './service-business-logic-layer:/home/node/app'
-  front:
-    image: node:20.19-bullseye
-    working_dir: /home/node/app
-    user: "node"  
-    environment:
-      - NODE_ENV=development
-    command: "sh -c 'npm install && npm run dev && tail -f /dev/null'"
-    ports:
-      - '3000:3000'
-    volumes:
-      - './front-react-web-app:/home/node/app'
+  # service-business-logic:
+  #   image: node:20.19-bullseye
+  #   working_dir: /home/node/app
+  #   user: "node"  
+  #   environment:
+  #     - NODE_ENV=development
+  #   command: "sh -c 'npm install && npm run start:dev && tail -f /dev/null'"
+  #   ports:
+  #     - '8002:8002'
+  #   volumes:
+  #     - './service-business-logic-layer:/home/node/app'
+  # front:
+  #   image: node:20.19-bullseye
+  #   working_dir: /home/node/app
+  #   user: "node"  
+  #   environment:
+  #     - NODE_ENV=development
+  #   command: "sh -c 'npm install && npm run dev && tail -f /dev/null'"
+  #   ports:
+  #     - '3000:3000'
+  #   volumes:
+  #     - './front-react-web-app:/home/node/app'
 
 #networks and volumes config
 networks:
