--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,22 +22,26 @@ services:
     user: "node"  
     environment:
       - NODE_ENV=development
+    depends_on:
+      - mysql
     command: "sh -c '/usr/local/bin/build-project.sh'"
     ports:
       - '8001:8001'
     volumes:
       - './service-data-access-layer:/home/node/app'
-  # service-business-logic:
-  #   image: node:20.19-bullseye
-  #   working_dir: /home/node/app
-  #   user: "node"  
-  #   environment:
-  #     - NODE_ENV=development
-  #   command: "sh -c 'npm install && npm run start:dev && tail -f /dev/null'"
-  #   ports:
-  #     - '8002:8002'
-  #   volumes:
-  #     - './service-business-logic-layer:/home/node/app'
+  service-business-logic:
+    build:
+      context: .
+      dockerfile: Dockerfile-business-logic-layer
+    working_dir: /home/node/app
+    user: "node"  
+    environment:
+      - NODE_ENV=development
+    command: "sh -c '/usr/local/bin/build-project.sh'"
+    ports:
+      - '8002:8002'
+    volumes:
+      - './service-business-logic-layer:/home/node/app'
   # front:
   #   image: node:20.19-bullseye
   #   working_dir: /home/node/app
