--- a/service-data-access-layer/.env.example
+++ b/service-data-access-layer/.env.example
@@ -5,4 +5,4 @@ DB_PASSWORD=''
 DB_NAME=virtual_wallet
 DATABASE_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
 
-API_KEY=sk_test_4eC39HqLyjWDarjtT1zdp7dc
+API_KEY=123456789
