--- a/Dockerfile-business-logic-layer
+++ b/Dockerfile-business-logic-layer
@@ -1,6 +1,6 @@
 FROM docker.io/node:20.19-bullseye
 
-RUN apt update && apt install -y dos2unix
+RUN apt-get update && apt-get install -y dos2unix
 
 COPY docker-scripts/building-service-bussines-logic.sh /usr/local/bin/build-project.sh
 
